@@ -1,5 +1,7 @@
 HEAD
 	+ Bug fix: port forwarding now works with PPPoE
+	+ Bug fix: openVPN interfaces are added as internal interfaces to
+	  iexternal and iexternalmodules (Closes #1758)
 1.4.2
 	+ Add a config option to disable the logging of dropped packets in firewall
 1.4
